[project]
name = "PyInsterallerRunner"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "burstknight", email = "burstknight@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pyinstaller>=5.9.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
PyInsterallerRunner = "PyInsterallerRunner.myPyInstallerRunner:main"

[tool.hatch.version]
path = "./src/PyInstallerRunner/version.py"

[tool.hatch.build.targets.wheel]
packages = [
	"src/PyInsterallerRunner"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
